Refactor `UseEntityIdInHqlComparison` to replace index-based list access with `getFirst()`